syntax = "proto3";

package message;

option go_package = "/message";

message Message {
    int64 msg_id = 1;
    int64 sender_id = 2;
    int64 receiver_id = 3;
    string content = 4;
    int64 timestamp = 5;
}

message SendMessageRequest {
    int64 sender_id = 1;
    int64 receiver_id = 2;
    string content = 3;
}

message SendMessageResponse {
    bool success = 1;
}

message GetMessagesRequest {
    int64 user_id = 1;          // 发起请求的用户ID
    int64 peer_id = 2;          // 聊天对象的用户ID
    int64 limit = 3;            // 每次请求返回的最大消息数
    int64 offset = 4;           // 从第几条记录开始读取
}

message GetMessagesResponse {
    repeated Message messages = 1; // 返回的消息列表
}

service MessageService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
}
